2006-02-09	Benedikt Meurer <benny@xfce.org>

	* exo/exo-utils.h: Do not use the exo_atomic_* functions, unless the
	  compiler will really inline the functions. Else, we can just call
	  the g_atomic_int_* counterparts here.

2006-02-08	Benedikt Meurer <benny@xfce.org>

	* exo/exo-url.c(exo_url_show_on_screen): Add better support to open
	  local paths using various fallbacks. Also add gnome-open as fallback
	  for URLs not support by the helpers.

2006-02-03	Benedikt Meurer <benny@xfce.org>

	* exo/exo-url.c: Define FNM_CASEFOLD for systems that don't support it.
	  Bug #1423.

2006-01-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_button_press_event): Reset
	  pressed_button to -1 after handling a double blick, so that
	  motion events occuring between here and the release event don't
	  trigger a DnD operation.

2006-01-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Drop accessibility support from the ExoIconView
	  widget class for now, as it's totally broken right now. This should
	  be rewritten from scratch at some time, using only the public
	  interface of the class, once Atk/Gtk+ offers better support for
	  accessibility on GtkCellRenderers.

2006-01-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Fix two potential bugs, where the return value
	  of g_list_remove() was ignored.

2006-01-31	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Check for fnmatch.h.
	* exo/exo-url.c: Make exo_url_show_on_screen() smarter in guessing the
	  correct application, it is now able to open local HTML files as well
	  if the url refers to a local file.
	* exo-open/main.c(main): Popup an error dialog if an error occurs while
	  trying to execute the preferred application or trying to open one of
	  the specified URLs. This way we can just use it right away from
	  applications/scripts without having to worry about user interaction.

2006-01-31	Benedikt Meurer <benny@xfce.org>
